refactor : DTO 책임 분리로 역할 명확화 (#95)